--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -38,6 +38,12 @@
 
       </div>
     </div>
+    
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h2><a href="/projectapplication">Create Your Own Project</a></h2>
+      </div>
+    </div>
   </div>
   
   <script type="text/javascript">
