--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -1,10 +1,10 @@
 <section>
   <div class="container">
     <div class="row" style="border: 1px solid;">
-      <div class="col-sm-4" style="border: 1px solid;">
+      <div class="col-xs-4" style="border: 1px solid;">
         <img src="http://rpiovn.org/images/rpi-tracker.jpg" class="img-responsive center-block projImg" />
       </div>
-      <div class="col-sm-8 projSummary">
+      <div class="col-xs-8 projSummary">
 
       </div>
     </div>
