--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -1,4 +1,12 @@
 <section>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <style>
+    h1, h2, h3, h4, h5, p, ul, ol, li {
+      font-family: 'Montserrat', sans-serif;
+      color: #594a42;
+    }
+  </style>
+  
   <div class="container">
     <div class="row" style="border: 1px solid;">
       <div class="col-sm-4" style="border: 1px solid;">
@@ -41,7 +49,7 @@
     
     <div class="row">
       <div class="col-md-12 text-center">
-        <h2><a href="/projectapplication">Create Your Own Project</a></h2>
+        <h2><a href="/projectapplication">Add Your Own Project!</a></h2>
       </div>
     </div>
   </div>
