--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -68,6 +68,8 @@
         $('#hardware').append(projectInfo[0].hardware);
         $('#software').append(projectInfo[0].software);
         
+        $('#faq').append('<br>');
+        
         //Fill out the FAQ section.
         for(var i=0; i < projectInfo[0].faqTitle.length; i++) {
           $('#faq').append('<h2>'+projectInfo[0].faqTitle[i]+'</h2>');
