--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -8,8 +8,8 @@
   </style>
   
   <div class="container">
-    <div class="row" style="border: 1px solid;">
-      <div class="col-sm-4" style="border: 1px solid;">
+    <div class="row" style="border: 2px solid #c7053d;">
+      <div class="col-sm-4" style="border: 2px solid #c7053d;">
         <img src="http://rpiovn.org/images/rpi-tracker.jpg" class="img-responsive center-block projImg" />
       </div>
       <div class="col-sm-8 projSummary">
@@ -18,7 +18,7 @@
     </div>
     
     <div class="row">
-      <div class="col-sm-12" style="border: 1px solid;">
+      <div class="col-sm-12" style="border: 2px solid #c7053d;">
 
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
