--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -58,7 +58,7 @@
     $(document).ready(function() {
       
       $.get('/api/projectinfo/list', '', function(data) {
-        debugger;
+        //debugger;
         
         var projectInfo = data.projectinfo;
         
