--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -9,10 +9,10 @@
   
   <div class="container">
     <div class="row" style="border: 2px solid #c7053d;">
-      <div class="col-sm-4">
+      <div class="col-sm-4" style="border-right: 2px solid #c7053d;">
         <img src="http://rpiovn.org/images/rpi-tracker.jpg" class="img-responsive center-block projImg" />
       </div>
-      <div class="col-sm-8 projSummary" style="border-left: 2px solid #c7053d;">
+      <div class="col-sm-8 projSummary">
 
       </div>
     </div>
