--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -5,6 +5,9 @@
       font-family: 'Montserrat', sans-serif;
       color: #594a42;
     }
+    .nav-tabs li {
+      border-top: 2px solid #c7053d;
+    }
   </style>
   
   <div class="container">
