--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -81,8 +81,8 @@
         }
         
         //Activate the tabs to get content to show
-        $('.nav-tabs').find('a').last().tab('show');
-        $('.nav-tabs').find('a').first().tab('show')
+        //$('.nav-tabs').find('a').last().tab('show');
+        //$('.nav-tabs').find('a').first().tab('show')
       });
       
     });
