--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -31,7 +31,7 @@
 
         <!-- Tab panes -->
         <div class="tab-content" style="min-height: 150px;">
-          <div role="tabpanel" class="tab-pane fade active" id="projectInfo">
+          <div role="tabpanel" class="tab-pane active" id="projectInfo">
             
           </div>
           <div role="tabpanel" class="tab-pane fade" id="hardware">
@@ -82,7 +82,7 @@
         
         //Activate the tabs to get content to show
         //$('.nav-tabs').find('a').last().tab('show');
-        $('.nav-tabs').find('a').first().tab('show')
+        //$('.nav-tabs').find('a').first().tab('show')
       });
       
     });
