--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -1,17 +1,24 @@
-<div class="container">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <style>
+    h1, h2, h3, h4, h5, p, ul, ol, li {
+      font-family: 'Montserrat', sans-serif;
+      color: #594a42;
+    }
+    
+  </style>
+
+<div class="container">  
 	<div class="row">
-		<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-			<article>
-				<p><a href="/">&larr; back to the home page</a></p>
-				<hr>
-				<header>
-					<h1>{{data.project.title}}</h1>
-					
-				</header>
-				<div class="page">
-					{{{data.project.summary}}}
-				</div>
-			</article>
-		</div>
+		<div class="col-md-8">
+			<h1>{{data.project.title}}</h1>
+      {{data.project.basicInfo}}
+    </div>  
+    <div class="col-md-4">
+      <img src="{{data.project.imgUrls[0]}}" class="img-responsive center-block" />
+    </div>
+  </div>
+  
+  <div class="row">
+   	
 	</div>
 </div>
