Developing /project/:project view

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -14,11 +14,15 @@
       {{data.project.basicInfo}}
     </div>  
     <div class="col-md-4">
-      <img src="{{data.project.imgUrls[0]}}" class="img-responsive center-block" />
+      <img src="/images/rpi-tracker.jpg" class="img-responsive center-block" />
     </div>
   </div>
   
   <div class="row">
    	
 	</div>
+  
+  <script type="text/javascript">
+    var blah = {{data.project.imgUrls[0]}};
+  </script>
 </div>
