--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -23,6 +23,6 @@
 	</div>
   
   <script type="text/javascript">
-    var blah = {{data.project.imgUrls}};
+    var blah = {{data.project.imgUrls["0"]}};
   </script>
 </div>
