--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -11,7 +11,7 @@
 	<div class="row">
 		<div class="col-md-8">
 			<h1>{{data.project.title}}</h1>
-      {{data.project.basicInfo}}
+      <div>{{data.project.basicInfo}}</div>
     </div>  
     <div class="col-md-4">
       <img src="/images/rpi-tracker.jpg" class="img-responsive center-block" />
