Developing /project/:project view

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -19,10 +19,27 @@
   </div>
   
   <div class="row">
-   	
+   	<div class="col-md-12">
+      <h2>Summary</h2>
+      {{{data.project.summary}}}
+    </div>
+	</div>
+  
+  <div class="row">
+   	<div class="col-md-12">
+      <h2>Hardware</h2>
+      {{{data.project.hardware}}}
+    </div>
+	</div>
+  
+  <div class="row">
+   	<div class="col-md-12">
+      <h2>Software</h2>
+      {{{data.project.software}}}
+    </div>
 	</div>
   
   <script type="text/javascript">
-    var imgUrls = '{{data.project.imgUrls}}'';
+    var imgUrls = '{{data.project.imgUrls}}';
   </script>
 </div>
