Developing /project/:project view

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -41,7 +41,7 @@
   
   <script type="text/javascript">
     var imgUrls = '{{data.project.imgUrls}}';
-    var faqTitle = '{{data.project.faqTitle}}';
-    var faqBody = '{{data.project.faqBody}}';
+    var faqTitle = '{{{data.project.faqTitle}}}';
+    var faqBody = '{{{data.project.faqBody}}}';
   </script>
 </div>
