Developing /project/:project view

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -47,7 +47,7 @@
 	</div>
   
   <script type="text/javascript">
-    var imgUrls = '{{{data.project.imgUrls}}';
+    var imgUrls = '{{{data.project.imgUrls}}}';
     var faqTitle = "{{{data.project.faqTitle}}}";
     var faqBody = "{{{data.project.faqBody}}}";
     
