Developing /project/:project view

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -49,7 +49,7 @@
   <script type="text/javascript">
     var imgUrls = '{{{data.project.imgUrls}}}';
     var faqTitle = "{{{data.project.faqTitle}}}";
-    var faqBody = "{{data.project.faqBody}}";
+    var faqBody = '{{{data.project.faqBody}}}';
     
     /*
     if(faqTitle.length > 0) {
