Developing /project/:project view

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -40,7 +40,7 @@
 	</div>
   
   <div class="row">
-   	<div class="col-md-12" id="faqSection" style="display: hidden;">
+   	<div class="col-md-12" id="faqSection" hidden>
       <h2>Frequently Asked Questions</h2>
       <div id="faqContent"></div>
     </div>
