--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -41,12 +41,29 @@
   
   <div class="row">
    	<div class="col-md-12" id="faqSection" hidden>
+      <br>
       <h2>Frequently Asked Questions</h2>
       <div id="faqContent"></div>
     </div>
 	</div>
   
   <script type="text/javascript">
+    $(document).ready(function() {
+      
+      $.get('/api/projectinfo/list', '', function(data) {
+        //debugger;
+        
+        var projectInfo = data.projectinfo;
+        
+        for(var i=0; i < projectInfo.length; i++) {
+          debugger;
+        }
+        
+      });
+      
+    });
+    
+    /*
     var imgUrls = '{{{data.project.imgUrls}}}';
     var faqTitle = "{{{data.project.faqTitle}}}";
     var faqBody = '{{{data.project.faqBody}}}';
@@ -64,6 +81,7 @@
         $('#faqContent').append('<br>');
       }
     }
+    */
     
   </script>
 </div>
