--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -18,7 +18,7 @@
     </div>
   </div>
   
-  <div class="row">
+  <div class="row" style="background-color: #f7f7f9;">
    	<div class="col-md-12">
       <h2>Summary</h2>
       {{{data.project.summary}}}
