Developing /project/:project view

--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -64,7 +64,7 @@
         //Fill in the content from the data retrieved from the server.
         $('.projSummary').append('<h1>'+projectInfo[0].title+'</h1>');
         $('.projSummary').append(projectInfo[0].basicInfo);
-        $('.projSummary').append('<a class="btn btn-primary" href="/project/'+projectInfo[0].slug+'">View Project Page</a>');
+        $('.projSummary').append('<a class="btn btn-primary center-text" href="/project/'+projectInfo[0].slug+'">View Project Page</a>');
         
         $('#projectInfo').append(projectInfo[0].summary);
         $('#hardware').append(projectInfo[0].hardware);
