--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -63,7 +63,7 @@
         
         //Fill in the content from the data retrieved from the server.
         var projBtn = '<a class="btn btn-primary center-text" href="/project/'
-        +projectInfo[0].slug+'">View Project Page</a>';
+        +projectInfo[0].slug+'">View Project Page</a><br>';
         $('.projSummary').append('<h1>'+projectInfo[0].title+'</h1>'+projBtn);
         $('.projSummary').append(projectInfo[0].basicInfo);
         
