Developing /project/:project view

--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -28,7 +28,7 @@
         </ul>
 
         <!-- Tab panes -->
-        <div class="tab-content" style="min-height: 150px;">
+        <div class="tab-content" style="min-height: 150px; background-color: #f7f7f9;">
           <div role="tabpanel" class="tab-pane active" id="projectInfo">
             
           </div>
