Updating links and footer.

--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -24,7 +24,38 @@
 			<script src="//cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.js"></script>
 			<script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+    
+  <style>
+    .quote {
+      background-color: #444;
+      color: #e1e1e1;
+    }
+    .quote blockquote {
+      border: none;
+      margin: 0;
+    }
+    .quote footer {
+      color: #c1c1c1;
+    }
+    section, header {
+      background-color: #fff;
+    }
+    body {
 
+    }
+    .footer {
+      padding: 20px 0;
+    }
+
+    #demo-nav {
+      display: none;
+    }
+
+    .show-nav #demo-nav {
+      display: block;
+    }
+  </style>
+    
 	</head>
 	<body>
 		<div id="header">
