--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -26,6 +26,14 @@
 		<![endif]-->
     
   <style>
+    .features .glyphicon {
+      font-size: 32px;
+    }
+
+    .row {
+      margin-bottom: 20px;
+    }
+
     .quote {
       background-color: #444;
       color: #e1e1e1;
