Updating links and footer.

--- a/plugin/rpiovn-plugin/keystone/templates/views/index.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/index.hbs
@@ -32,13 +32,13 @@
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-wrench'></i>
         <h3>Join A Project</h3>
-        <p>Want to participate? Read this guide on <a href="/page/how-it-works">how it all works</a>, then <a href="/page/browse-projects">browse our list of Raspberry Pi based open source projects</a>, or <a href="/projectapplication">apply to start your own project</a>.</p>
+        <p>Want to participate? Read this guide on <a href="/page/how-it-works">how it all works</a>, then <a href="/browseprojects">browse our list of Raspberry Pi based open source projects</a>, or <a href="/projectapplication">apply to start your own project</a>.</p>
       </div>
 
       <div class='col-sm-4 col-xs-6'>
         <i class='glyphicon glyphicon-time'></i>
         <h3>Log Time</h3>
-        <p>Developers and technical writers can <a href="/logwork" target="_blank">log time</a> and effort in the <a href="/logwork" target="_blank">Project Dashboard</a>. Logging work ensures you are fairly paid for your effort when a project is sold in the store or generates an affiliate sale. You'll need to <a href="/createaccount">apply for an account</a> before you can begin contributing to projects.</p>
+        <p>Developers and technical writers can <a href="/logwork" target="_blank">log time</a> and effort in the <a href="/logwork" target="_blank">Project Dashboard</a>. Logging work ensures you are fairly paid for your effort when a project is sold in the store or generates an affiliate sale. You'll need to <a href="/createaccount">sign up for an account</a> before you can begin contributing to projects.</p>
       </div>
     </div>
   </div>
@@ -46,85 +46,3 @@
 
 
 
-<style>
-  /* Sticky footer styles
-  -------------------------------------------------- */
-  html {
-    position: relative;
-    min-height: 100%;
-  }
-  body {
-    /* Margin bottom by footer height */
-    margin-bottom: 200px;
-  }
-  .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    /* Set the fixed height of the footer here */
-    height: 200px;
-  }
-  .footer {
-    color: #efefef;
-    background-color: #333;
-  }
-  .footer a {
-    color: #9af7fe;
-  }
-  @media only screen and (max-width: 768px) {
-    body { margin-bottom: 400px; }
-    .footer { height: 400px; }
-  }
-</style>
-<div class='footer'>
-  <div class='container'>
-    <div class='row'>
-      <div class='col-sm-4 col-md-3 col-xs-6'>
-        <h4>RPiOVN.com</h4>
-        <p>Please excuse the dust. This website is brand new and undergoing rapid changes. Many links may not work.</p>
-        <p><a href='http://rpiovn.com/page/how-it-works'>More About Us <i class='glyphicon glyphicon-arrow-right'></i></a></p>
-      </div>
-
-      <div class='col-sm-2 col-xs-6 col-md-offset-1'>
-        <h4>Links</h4>
-        <ul class='list-unstyled'>
-          <li><a href='http://rpiovn.com/'>Home</a></li>
-          
-          <!-- Sign-Out and Sign-In Menu link. -->
-          {{#if user}}
-          <li><a href="/keystone/signout">Sign Out</a></li>
-          {{else}}
-          <li><a href="/keystone/signin">Sign In</a></li>
-          {{/if}}
-
-          <li><a href='http://rpiovn.com/page/browse-projects'>Projects</a></li>
-        </ul>
-      </div>
-
-      <div class='clearfix visible-xs'></div>
-
-      <div class='col-sm-2 col-xs-6'>
-        <h4>Stay in Touch</h4>
-        <ul class='list-unstyled'>
-          <li><a href='http://rpiovn.com/page/how-it-works'>About</a></li>
-          <li><a href='http://rpiovn.com/contactus'>Contact Us</a></li>
-          <li><a href='http://rpiovn.com/blog'>Blog</a></li>
-          <!--
-          <li><a href='#/'>Twitter</a></li>
-          <li><a href='#/'>Facebook</a></li>
-          -->
-        </ul>
-      </div>
-
-      <div class='col-sm-4 col-md-3 col-md-offset-1 col-xs-6'>
-        <h4>Contact Us</h4>
-        <ul class='list-unstyled'>
-          <li><i class='glyphicon glyphicon-globe'></i> Friday Harbor, WA, USA<li>
-          <li><i class='glyphicon glyphicon-envelope'></i> <a href='http://rpiovn.com/contactus'>Contact Us</a><li>
-        </ul>
-
-        <p>All website content is open for reuse under the <a href="http://choosealicense.com/licenses/mit/" target="_blank">MIT License</a> and available as a <a href="https://github.com/christroutner/rpiovn" target="_blank">GitHub repository</a>.</p>
-      </div>
-    </div>
-  </div>
-</div>
