--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -179,12 +179,93 @@
 			<!-- The content block should contain the body of your template's content-->
 			{{{body}}}
 		</div>
-		<div class="container">
-			<div id="footer">
-				<!--<p>Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.</p>-->
-			</div>
-		</div>
 		
+		
+    
+    <style>
+      /* Sticky footer styles
+      -------------------------------------------------- */
+      html {
+        position: relative;
+        min-height: 100%;
+      }
+      body {
+        /* Margin bottom by footer height */
+        margin-bottom: 200px;
+      }
+      .footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        /* Set the fixed height of the footer here */
+        height: 200px;
+      }
+      .footer {
+        color: #efefef;
+        background-color: #333;
+      }
+      .footer a {
+        color: #9af7fe;
+      }
+      @media only screen and (max-width: 768px) {
+        body { margin-bottom: 400px; }
+        .footer { height: 400px; }
+      }
+    </style>
+    <div class='footer'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col-sm-4 col-md-3 col-xs-6'>
+            <h4>RPiOVN.com</h4>
+            <p>Please excuse the dust. This website is brand new and undergoing rapid changes. If you find anything amiss, please let us know.</p>
+            <p><a href='/contactus'>Contact Us <i class='glyphicon glyphicon-arrow-right'></i></a></p>
+          </div>
+
+          <div class='col-sm-2 col-xs-6 col-md-offset-1'>
+            <h4>Links</h4>
+            <ul class='list-unstyled'>
+              <li><a href='http://rpiovn.com/'>Home</a></li>
+
+              <!-- Sign-Out and Sign-In Menu link. -->
+              {{#if user}}
+              <li><a href="/keystone/signout">Sign Out</a></li>
+              {{else}}
+              <li><a href="/keystone/signin">Sign In</a></li>
+              {{/if}}
+
+              <li><a href='/browseprojects'>Browse Projects</a></li>
+            </ul>
+          </div>
+
+          <div class='clearfix visible-xs'></div>
+
+          <div class='col-sm-2 col-xs-6'>
+            <h4>Stay in Touch</h4>
+            <ul class='list-unstyled'>
+              <li><a href='/page/how-it-works'>About</a></li>
+              <li><a href='/contactus'>Contact Us</a></li>
+              <li><a href='/blog'>Blog</a></li>
+              <!--
+              <li><a href='#/'>Twitter</a></li>
+              <li><a href='#/'>Facebook</a></li>
+              -->
+            </ul>
+          </div>
+
+          <div class='col-sm-4 col-md-3 col-md-offset-1 col-xs-6'>
+            <h4>Contact Us</h4>
+            <ul class='list-unstyled'>
+              <li><i class='glyphicon glyphicon-globe'></i> Friday Harbor, WA, USA<li>
+              <li><i class='glyphicon glyphicon-envelope'></i> <a href='/contactus'>Contact Us</a><li>
+            </ul>
+
+            <p>All website content is open for reuse under the <a href="http://choosealicense.com/licenses/mit/" target="_blank">MIT License</a> and available as a <a href="https://github.com/christroutner/rpiovn" target="_blank">GitHub repository</a>.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    
 		{{!--
 			//- Customise which Bootstrap javascript files are served by including
 			//- them specifically here, instead of bootstrap-3.3.5.min.js
