--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -207,6 +207,9 @@
       .footer a {
         color: #9af7fe;
       }
+      .footer h4, .footer p {
+        color: #000;
+      }
       @media only screen and (max-width: 768px) {
         body { margin-bottom: 400px; }
         .footer { height: 400px; }
