--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -208,7 +208,7 @@
         color: #9af7fe;
       }
       .footer h4, .footer p {
-        color: #000;
+        color: #FFF;
       }
       @media only screen and (max-width: 768px) {
         body { margin-bottom: 400px; }
