Updating links and footer.

--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -207,7 +207,7 @@
       .footer a {
         color: #9af7fe;
       }
-      .footer h4, .footer p {
+      .footer h4, .footer p, .footer li {
         color: #FFF;
       }
       @media only screen and (max-width: 768px) {
