--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -48,7 +48,8 @@
     
     <div class="row">
       <div class="col-md-12 text-center">
-        <h2><a href="/projectapplication">Add Your Own Project!</a></h2>
+        <!-- <h2><a href="/projectapplication">Add Your Own Project!</a></h2> -->
+        <a role="button" class="btn btn-lg btn-primary" href="/projectapplication">Add Your Own Project!</a>
       </div>
     </div>
     
