--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -218,7 +218,7 @@
     <div class='footer'>
       <div class='container'>
         <div class='row'>
-          <div class='col-sm-4 col-md-3 col-xs-6'>
+          <div class='col-sm-4 col-md-3 hidden-xs'>
             <h4>RPiOVN.com</h4>
             <p>Please excuse the dust. This website is brand new and undergoing rapid changes. If you find anything amiss, please let us know.</p>
             <p><a href='/contactus'>Contact Us <i class='glyphicon glyphicon-arrow-right'></i></a></p>
@@ -255,7 +255,7 @@
             </ul>
           </div>
 
-          <div class='col-sm-4 col-md-3 col-md-offset-1 col-xs-6'>
+          <div class='col-sm-4 col-md-3 col-md-offset-1 hidden-xs'>
             <h4>Contact Us</h4>
             <ul class='list-unstyled'>
               <li><i class='glyphicon glyphicon-globe'></i> Friday Harbor, WA, USA<li>
