making minor layout tweeks for better display on smart phones.

--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -224,7 +224,7 @@
             <p><a href='/contactus'>Contact Us <i class='glyphicon glyphicon-arrow-right'></i></a></p>
           </div>
 
-          <div class='col-sm-2 col-xs-6 col-md-offset-1'>
+          <div class='col-sm-2 col-xs-offset-1 col-xs-5 col-md-offset-1'>
             <h4>Links</h4>
             <ul class='list-unstyled'>
               <li><a href='http://rpiovn.com/'>Home</a></li>
