making minor layout tweeks for better display on smart phones.

--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -240,7 +240,7 @@
             </ul>
           </div>
 
-          <!-- <div class='clearfix visible-xs'></div> -->
+          <div class='clearfix visible-sm'></div>
 
           <div class='col-sm-2 col-xs-6'>
             <h4>Stay in Touch</h4>
