making minor layout tweeks for better display on smart phones.

--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -218,13 +218,13 @@
     <div class='footer'>
       <div class='container'>
         <div class='row'>
-          <div class='col-sm-4 col-md-3 hidden-xs'>
+          <div class='col-md-3 col-sm-4 hidden-xs'>
             <h4>RPiOVN.com</h4>
             <p>Please excuse the dust. This website is brand new and undergoing rapid changes. If you find anything amiss, please let us know.</p>
             <p><a href='/contactus'>Contact Us <i class='glyphicon glyphicon-arrow-right'></i></a></p>
           </div>
 
-          <div class='col-sm-2 col-xs-offset-1 col-xs-5 col-md-offset-1'>
+          <div class='col-md-offset-1 col-sm-2 col-xs-offset-1 col-xs-5'>
             <h4>Links</h4>
             <ul class='list-unstyled'>
               <li><a href='http://rpiovn.com/'>Home</a></li>
@@ -255,7 +255,7 @@
             </ul>
           </div>
 
-          <div class='col-sm-4 col-md-3 col-md-offset-1 hidden-xs'>
+          <div class='col-md-3 col-md-offset-1 col-sm-4 hidden-xs'>
             <h4>Contact Us</h4>
             <ul class='list-unstyled'>
               <li><i class='glyphicon glyphicon-globe'></i> Friday Harbor, WA, USA<li>
