making minor layout tweeks for better display on smart phones.

--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -218,7 +218,7 @@
     <div class='footer'>
       <div class='container'>
         <div class='row'>
-          <div class='col-md-3 col-sm-4 hidden-xs'>
+          <div class='col-md-3 hidden-sm hidden-xs'>
             <h4>RPiOVN.com</h4>
             <p>Please excuse the dust. This website is brand new and undergoing rapid changes. If you find anything amiss, please let us know.</p>
             <p><a href='/contactus'>Contact Us <i class='glyphicon glyphicon-arrow-right'></i></a></p>
