making minor layout tweeks for better display on smart phones.

--- a/plugin/rpiovn-plugin/keystone/templates/views/projectapplication.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/projectapplication.hbs
@@ -31,7 +31,12 @@
       </div>
 
       <br>
-      <p>A good template to use as an example for filling out the sections below is the <a href="/page/rpi-tracking-device">GPS tracking device</a>. Adapt your project information to fit the format of information on that project, and fill it in below.</p>
+      <p>
+        A good template to use as an example for filling out the sections below is the 
+        <a href="/project/rpi-tracker">RPi-Tracker</a>. Adapt your project information 
+        to fit the format of information on that project, and fill it in below.
+      </p>
+      <br>
       <div class="form-group">
         <label for="inputSummary" class="col-sm-2 control-label">Project Summary:</label>
         <div class="col-sm-10">            
