--- a/public/js/logwork/templates/leftMenu.html
+++ b/public/js/logwork/templates/leftMenu.html
@@ -2,29 +2,19 @@
 <!-- Sidebar user panel (optional) -->
 <div class="user-panel">
   <div class="pull-left image">
-    <img src="../images/company-logo-160x160px.jpg" class="img-circle" alt="User Image">
+    <img src="../images/RPiLogo.png" class="img-circle" alt="User Image">
   </div>
   <div class="pull-left info">
-    <p class="text-center">Client Company<br>
-    <small>Tagline Here</small>
+    <p class="text-center">RPi OVN<br>
+    <small></small>
     </p>
   </div>
 </div>
 
-<!-- search form (Optional) -->
-<form action="#" method="get" class="sidebar-form">
-  <div class="input-group">
-    <input type="text" name="q" class="form-control" placeholder="Search...">
-    <span class="input-group-btn">
-      <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i></button>
-    </span>
-  </div>
-</form>
-<!-- /.search form -->
 
 <!-- Sidebar Menu -->
 <ul class="sidebar-menu">
-  <li class="header">HEADER</li>
+  <li class="header">Main Menu</li>
   <!-- Optionally, you can add icons to the links -->
   <li class="active"><a href="#" id="dashboardLink"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
   <!-- <li><a href="#" id="pagesLink"><i class="fa fa-link" ></i> <span>Pages</span></a></li>  -->
