--- a/plugin/rpiovn-plugin/keystone/templates/views/logwork.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/logwork.hbs
@@ -111,7 +111,7 @@
                   <!-- The user image in the navbar-->
                   <img src="../images/company-logo-160x160px.jpg" class="user-image" alt="User Image">
                   <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                  <span class="hidden-xs">Your Profile</span>
+                  <span class="hidden-xs">Your Profile  <i class="fa fa-caret-square-o-down"></i></span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- The user image in the menu -->
