--- a/plugin/rpiovn-plugin/keystone/templates/views/logwork.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/logwork.hbs
@@ -109,21 +109,22 @@
                 <!-- Menu Toggle Button -->
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <!-- The user image in the navbar-->
-                  <img src="../images/company-logo-160x160px.jpg" class="user-image" alt="User Image">
+                  <img src="../images/default-profile.png" class="user-image" alt="User Image">
                   <!-- hidden-xs hides the username on small devices so only the image appears. -->
                   <span class="hidden-xs">Your Profile  <i class="fa fa-caret-square-o-down"></i></span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- The user image in the menu -->
                   <li class="user-header">
-                    <img src="../images/company-logo-160x160px.jpg" class="img-circle" alt="User Image">
+                    <img src="../images/default-profile.png" class="img-circle" alt="User Image">
                     <p>
                       Your Profile
-                      <small>Tagline Here</small>
+                      <!-- <small>Tagline Here</small> -->
                     </p>
                   </li>
                   <!-- Menu Body -->
                   <li class="user-body">
+                    <!--
                     <div class="col-xs-4 text-center">
                       <a href="#">Followers</a>
                     </div>
@@ -133,6 +134,7 @@
                     <div class="col-xs-4 text-center">
                       <a href="#">Friends</a>
                     </div>
+                    -->
                   </li>
                   <!-- Menu Footer-->
                   <li class="user-footer">
@@ -198,6 +200,8 @@
           <div class="container-fluid" id="workReportView" hidden></div>
           
           <div class="container" id="projectView" hidden></div>
+          
+          <div class="container" id="editProfileView" hidden></div>
 
         </section><!-- /.content -->
       </div><!-- /.content-wrapper -->
