Adding new Edit Profile view

--- a/plugin/rpiovn-plugin/keystone/templates/views/logwork.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/logwork.hbs
@@ -139,7 +139,7 @@
                   <!-- Menu Footer-->
                   <li class="user-footer">
                     <div class="pull-left">
-                      <a href="#" class="btn btn-default btn-flat">Profile</a>
+                      <a href="#" class="btn btn-default btn-flat" onclick="global.leftMenuView.showEditProfile()">Profile</a>
                     </div>
                     <div class="pull-right">
                       <a href="/keystone/signout" class="btn btn-default btn-flat">Sign out</a>
