Fixing bug in logWorkView.js

--- a/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
@@ -95,7 +95,7 @@
 
       //Submit the data to the server.
       $.post('/api/users/create', userData, function(data) {
-        debugger;
+        //debugger;
 
         //New user account was successfully created
         if( data.user._id != "" ) {
