--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -282,5 +282,13 @@
     <script type="text/javascript">var section = {{{JSON section}}};</script>
     <script src="/js/navMenu.js" type="text/javascript"></script>
     
+    <!-- Hide the preloader after the page has loaded -->
+    <script type="text/javascript">
+      //Hide the preloader after everything finished loading and document is ready.
+      $(document).ready(function() {
+        $('#loader-wrapper').hide();
+      });
+    </script>
+    
 	</body>
 </html>
