fixing link on homepage

--- a/plugin/rpiovn-plugin/keystone/templates/views/index.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/index.hbs
@@ -7,7 +7,7 @@
       <div class='col-md-7'>
         <h1>Raspberry Pi Open Value Network</h1>
         <p class='lead'>
-          RPiOVN.com is an <a href="http://rpiovn.com/blog/post/what-is-an-open-value-network">Open Value Network</a> (<b>OVN</b>) 
+          RPiOVN.org is an <a href="/blog/post/what-is-an-open-value-network">Open Value Network</a> (<b>OVN</b>) 
           for Raspberry Pi programmers. Members contributing time to a project can log their time in 
           the <a href="/logwork">Project Dashboard</a>. When products are sold, profit is distributed 
           fairly based on time contributed to that project.
