Adding RPiBroker to project list

--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -10,7 +10,7 @@
   
   <div class="container">
     <div class="row" style="border: 2px solid #c7053d;">
-      <div class="col-sm-4" style="border-right: 1px solid #c7053d;">
+      <div class="col-sm-4" style="border-right: 1px solid #c7053d; border-radius: 25px;">
         <img src="/images/rpi-tracker.jpg" class="img-responsive center-block projImg" />
       </div>
       <div class="col-sm-8 projSummary"  style="border-left: 1px solid #c7053d;"></div>
