Adding RPiBroker to project list

--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -17,7 +17,7 @@
     </div>
     
     <div class="row">
-      <div class="col-sm-12" style="border: 2px solid #c7053d;">
+      <div class="col-sm-12" style="border: 2px solid #c7053d;  border-radius: 25px;">
 
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
