Adding RPiBroker to project list

--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -9,10 +9,63 @@
   </style>
   
   <div class="container">
-    <div style="border: 2px solid #c7053d;  border-radius: 25px;">
+    <div style="border: 2px solid #c7053d;  border-radius: 25px; padding: 10px;">
       <div class="row" style="">
         <div class="col-sm-4" style="border-right: 1px solid #c7053d;">
           <img src="/images/rpi-tracker.jpg" class="img-responsive center-block projImg" />
+        </div>
+        <div class="col-sm-8 projSummary"  style="border-left: 1px solid #c7053d;"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12" style="">
+
+          <!-- Nav tabs -->
+          <ul class="nav nav-tabs" role="tablist">
+            <li role="presentation" class="active"><a href="#projectInfo" role="tab" data-toggle="tab">Project Summary</a></li>
+            <li role="presentation"><a href="#hardware" role="tab" data-toggle="tab">Hardware</a></li>
+            <li role="presentation"><a href="#software" role="tab" data-toggle="tab">Software</a></li>
+            <li role="presentation"><a href="#faq" role="tab" data-toggle="tab">FAQ</a></li>
+          </ul>
+
+          <!-- Tab panes -->
+          <div class="tab-content" style="min-height: 150px; background-color: #f7f7f9;">
+            <div role="tabpanel" class="tab-pane active" id="projectInfo">
+
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="hardware">
+
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="software">
+
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="faq">
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <!-- <h2><a href="/projectapplication">Add Your Own Project!</a></h2> -->
+        <br>
+        <a role="button" class="btn btn-lg btn-primary" href="/projectapplication">Add Your Own Project!</a>
+        <br>
+      </div>
+    </div>
+    
+  </div>
+  
+  <br>
+  
+  <div class="container">
+    <div style="border: 2px solid #c7053d;  border-radius: 25px; padding: 10px;">
+      <div class="row" style="">
+        <div class="col-sm-4" style="border-right: 1px solid #c7053d;">
+          <img src="/images/proj-img.jpg" class="img-responsive center-block projImg" />
         </div>
         <div class="col-sm-8 projSummary"  style="border-left: 1px solid #c7053d;"></div>
       </div>
